# gtsam

./: .vimspector.json  1.viz  imuFactorExampleResults.csv
CppUnitLite/: Test.h
cmake/: HandlePrintConfiguration.cmake
examples/: CMakeLists.txt  CombinedImuFactorsExample.cpp  IMUKittiExampleGPS.cpp  ISAM2Example_SmartFactor.cpp  ImuFactorsExample.cpp  ImuFactorsExample2.cpp  OdometryExample.cpp  SFMdata.h  TriangulationLOSTExample.cpp  VisualISAM2Example.cpp  VisualISAMExample.cpp  self_test_SOn.cpp  self_test_between_factor.cpp  self_test_incremental_fixed_lag_smoother.cpp  self_test_isam2_bayes_tree.cpp
examples/self_test/: 1.viz  CMakeLists.txt  self_test_SOn.cpp  self_test_basic_data_struct.cpp  self_test_between_factor.cpp  self_test_incremental_fixed_lag_smoother.cpp  self_test_isam2_bayes_tree.cpp  test_vertical_block_matrix.cpp
gtsam/base/: ConcurrentMap.h  FastMap.h  GenericValue.h  Group.h  Lie.h  Manifold.h  Matrix.cpp  Matrix.h  OptionalJacobian.h  SymmetricBlockMatrix.cpp  SymmetricBlockMatrix.h  Testable.h  ThreadsafeException.h  Value.h  Vector.cpp  Vector.h  VectorSpace.h  VerticalBlockMatrix.cpp  VerticalBlockMatrix.h  chartTesting.h  concepts.h  debug.cpp  debug.h  lieProxies.h  make_shared.h  numericalDerivative.h  testLie.h  timing.h  treeTraversal-inst.h  types.cpp  types.h  utilities.h
gtsam/geometry/: Cal3.cpp  Cal3.h  CameraSet.h  Cyclic.h  EssentialMatrix.cpp  EssentialMatrix.h  Line3.h  OrientedPlane3.cpp  OrientedPlane3.h  PinholeCamera.h  Point3.cpp  Pose2.h  Pose3.cpp  Pose3.h  Quaternion.h  Rot3.cpp  Rot3.h  Rot3M.cpp  Rot3Q.cpp  SO3.cpp  SO3.h  SO4.cpp  SOn-inl.h  SOn.cpp  SOn.h  Unit3.cpp  Unit3.h  (+2 more)
tests/: CMakeLists.txt  ImuMeasurement.h  testGaussianISAM2.cpp
(+149 files in other folders)
